my fifth change

--- a/index.html
+++ b/index.html
@@ -26,21 +26,29 @@
         function conditionCheck() {
             let temp = +document.querySelector("#temp").value;
 
-            if ( temp > 50 ) {
+            if ( temp > 30 ) {
                 document.querySelector("#result")
-                .innerHTML = "it's too hot outside"
+                .innerHTML = "its too hot"
             }
             else if ( temp > 25 ) {
                 document.querySelector("#result")
-                .innerHTML = "it pleasant outside"
+                .innerHTML = "Its pleasant outside"
             }
-            else if ( temp < 10 ){
+            else if ( temp > 20 ) {
                 document.querySelector("#result")
-                .innerHTML = "it's freezing outside"
-            } else {
+                .innerHTML = "if you are riding a bike please carry jacket"
+            }
+            else if ( temp > 10 ){
                 document.querySelector("#result")
-                .innerHTML = "don't go outside"
+                .innerHTML = "probably you would need a jacket"
             } 
+            else if ( temp > 1 ){
+                document.querySelector("#result")
+                .innerHTML = "probably you would need double jacket"
+            }else{
+                document.querySelector("#result")
+                .innerHTML = "its freezing outside"
+            }
             
         }
 
